# gitpod-cobra-golang

./: .gitpod.yml  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: main.yaml
.gitpod/: Dockerfile
bazel/go/: deps.bzl
cli/: BUILD.bazel  main.go
cli/cmd/: BUILD.bazel  list.go  root.go
internal/aws/: BUILD.bazel  s3.go
internal/console/: BUILD.bazel  print.go
lib/cobrago/: BUILD.bazel
