load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//bazel/go:deps.bzl", "BAZEL_GOLANG_VERSION")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

# gazelle:prefix github.com/jrbeverly/gitpod-cobra-golang
gazelle(name = "gazelle")

pkg_tar(
    name = "package",
    srcs = ["//cli:cobrago"],
    mode = "0755",
    package_dir = "/",
)

pkg_tar(
    name = "image_package",
    srcs = ["//cli:cobrago_docker"],
    mode = "0755",
    package_dir = "/usr/bin/",
)

container_image(
    name = "go_image",
    base = "@go_image_base//image",
    tars = [":image_package"],
    entrypoint = ["/usr/bin/cobrago"],
    user = "nonroot",
    labels = {
        "language-name": BAZEL_GOLANG_VERSION
    }
)
