load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cobrago_commands",
    srcs = ["main.go"],
    importpath = "github.com/jrbeverly/gitpod-cobra-golang/cli",
    visibility = ["//visibility:private"],
    deps = ["//cli/cmd"],
)

go_binary(
    name = "cobrago",
    embed = [":cobrago_commands"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "cobrago_docker",
    embed = [":cobrago_commands"],
    visibility = ["//visibility:public"],
    goos = "linux",
    goarch = "amd64",
)