load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "console",
    srcs = ["print.go"],
    importpath = "github.com/jrbeverly/gitpod-cobra-golang/internal/console",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "//lib/cobrago"
    ],
)